# fcgi-client-cpp

./: CMakeLists.txt  LICENSE  README.md
example/: TestClient.cpp
inc/: Common.h  FastCGIClient.h  FastCGIClientImpl.h  ILogger.h  StreamReader.h  StreamReaderImpl.h
src/: DefaultLogger.cpp
